// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Should render a button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
}

.c0 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c0:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c0:hover {
  background: #00b5c8;
  border: 2px solid #00b5c8;
}

.c0 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="md"
  type="button"
>
  Button 
</button>
`;

exports[`Button Should render a completed checkmark 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg {
  width: 16px;
  height: 16px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: currentColor;
}

.c2 svg g,
.c2 svg p {
  fill: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
}

.c0 .c1 {
  padding: 0 8px;
}

.c0 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c0:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c0:hover {
  background: #00b5c8;
  border: 2px solid #00b5c8;
}

.c0 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="md"
  type="button"
>
  Button 
  <div
    className="c1 c2"
    height={16}
    width={16}
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm4.35 7.73l-5.62 5.62a.48.48 0 01-.7 0L7.65 13a.5.5 0 010-.71l.53-.53a.48.48 0 01.7 0l1.5 1.49 4.74-4.74a.5.5 0 01.7 0l.53.53a.5.5 0 010 .69z"
      />
    </svg>
  </div>
</button>
`;

exports[`Button Should render a loading state 1`] = `
.c1 {
  width: 20px;
  height: 20px;
  display: block;
  position: absolute;
}

.c1 div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  border: 2px solid;
  border-radius: 50%;
  -webkit-animation: fEWCgj 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: fEWCgj 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  border-color: #FFFFFF transparent transparent transparent;
}

.c1 div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c1 div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: transparent;
}

.c0 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c0:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c0:hover {
  background: #00b5c8;
  border: 2px solid #00b5c8;
}

.c0 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c2 {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="md"
  type="button"
>
  Button 
  <div
    className="c1 c2"
    color="white"
    size={20}
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</button>
`;

exports[`Button Should render a router Link 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
}

.c0 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c0:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c0:hover {
  background: #00b5c8;
  border: 2px solid #00b5c8;
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
>
  Button 
</a>
`;

exports[`Button Should render an anchor 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  -webkit-appearance: none !important;
}

.c0 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c0:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c0:hover {
  background: #00b5c8;
  border: 2px solid #00b5c8;
}

.c0:visited,
.c0:hover,
.c0:active {
  box-shadow: none;
}

<a
  className="c0"
  disabled={false}
  href="#"
  size="md"
  type="button"
>
  Button 
</a>
`;
